--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.84.0",
     "clsx": "^2.1.0",
+    "i18next": "^25.7.2",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.344.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.0",
     "react-router-dom": "^7.9.6",
     "tailwind-merge": "^2.2.1"
   },
